--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Hau Nguyen <ZIGVY CORP>",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.16.2",
     "bootstrap-sass": "^3.3.7",
     "classnames": "^2.2.5",
     "history": "^4.6.1",
@@ -25,8 +26,10 @@
     "meteor-node-stubs": "~0.2.4",
     "moment": "^2.18.1",
     "prop-types": "^15.5.8",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "react": "^15.6.1",
+    "react-addons-shallow-compare": "^15.6.0",
+    "react-dates": "^12.6.0",
+    "react-dom": "^15.6.1",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "simpl-schema": "0.0.3",
