--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Hau Nguyen <ZIGVY CORP>",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "bootstrap-sass": "^3.3.7",
     "classnames": "^2.2.5",
     "history": "^4.6.1",
